fix: fixing gaps on hero media - v0.4.3

--- a/src/styles/pages/home/Hero.module.scss
+++ b/src/styles/pages/home/Hero.module.scss
@@ -65,7 +65,7 @@
 .social {
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  gap: 0.75em;
   background: var.$brand_color_200;
   padding: 1em;
   border-radius: 0.1em;
